objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Call Center</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accel_Amusements__c</fullName>
        <formula>Account.Accel_Amusements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Amusements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Portion_Of_Dark_Time_Rev_Loss__c</fullName>
        <formula>Dark_Time_Revenue_Loss__c * 0.35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Portion Dark Time Revenue Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accel_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Replacement for Solution Picklist</description>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Priority_Value__c</fullName>
        <description>Converts the Account Priority Letter Value (AAA through D) into a number that contributes to the overall Service Appointment Priority Values used in Field Service.</description>
        <formula>If(Ispickval(Account.Priority__c,&quot;AAA&quot;),0,
If(Ispickval(Account.Priority__c,&quot;AA&quot;),1,
If(Ispickval(Account.Priority__c,&quot;A&quot;),2,
If(Ispickval(Account.Priority__c,&quot;B&quot;),3,
If(Ispickval(Account.Priority__c, &quot;C&quot;),5,
If(Ispickval(Account.Priority__c,&quot;D&quot;),7,5))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the Account Priority Letter Value (AAA through D) into a number that contributes to the overall Service Appointment Priority Values used in Field Service.</inlineHelpText>
        <label>Account Priority Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose the Location destination of the part, VGT, RT, etc.</description>
        <label>Location to Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Location to Name)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_on_Approvals__c</fullName>
        <label>Total Add-Ons</label>
        <summaryFilterItems>
            <field>Case_Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Add</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Line_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Addition_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Addition Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Case_Hours__c</fullName>
        <formula>if(ispickval(Status, &quot;Closed&quot;), 
(((ClosedDate - CreatedDate)*24)*60), 
(((Now() - CreatedDate)*24)*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Case (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Case__c</fullName>
        <formula>if(ispickval(Status, &quot;Closed&quot;),
(ClosedDate -  CreatedDate), 
(Now() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Case (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_of_Claim__c</fullName>
        <label>Amount of Claim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Amusement Operator)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusement_Region__c</fullName>
        <label>Amusement Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Denied_AddSwap__c</fullName>
        <label>Approved/Denied</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved/Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Model__c</fullName>
        <formula>Asset.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_RM__c</fullName>
        <formula>Account.Relationship_Manager__r.FirstName&amp;&quot; &quot;&amp;Account.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Rank__c</fullName>
        <formula>/*
 *  == Revision Log ===
 *  (6/29/2021)
 *  1. Customer Complaint should be changed to Customer Complaint / Ticket Issue
 *  2. Marketing(Tablets/Upshow) should be changed to Marketing
 *  @see https://accel-entertainment.monday.com/boards/942883797/pulses/1434340508
 */
CASE(PriorityLookup__c,
&apos;A&apos;,
   CASE(Service_Category__c,&apos;All Games Down&apos;,1,
   &apos;Customer&apos;,18,
   &apos;Standalone ATM&apos;,25,
   &apos;Marketing&apos;,29,
   &apos;RT (backup RT available)&apos;,12,
   &apos;RT (no backup RT)&apos;,3,
   &apos;VGT&apos;,7,
   0),
&apos;B&apos;,
   CASE(Service_Category__c,&apos;All Games Down&apos;,2,
   &apos;Amusement&apos;,19,
   &apos;Customer&apos;,22,
   &apos;Standalone ATM&apos;,26,
   &apos;Marketing&apos;,30,
   &apos;RT (backup RT available)&apos;,13,
   &apos;RT (no backup RT)&apos;,8,
   &apos;VGT&apos;,7,
   0),
&apos;C&apos;,
   CASE(Service_Category__c,&apos;All Games Down&apos;,10,
   &apos;Amusement&apos;,21,
   &apos;Customer&apos;,24,
   &apos;Standalone ATM&apos;,28,
   &apos;Marketing&apos;,32,
   &apos;RT (backup RT available)&apos;,16,
   &apos;RT (no backup RT)&apos;,11,
   &apos;VGT&apos;,15,
   0),
&apos;&apos;,
   CASE(Service_Category__c,&apos;All Games Down&apos;,5,
   &apos;Amusement&apos;,20,
   &apos;Customer&apos;,23,
   &apos;Standalone ATM&apos;,27,
   &apos;Marketing&apos;,31,
   &apos;RT (backup RT available)&apos;,14,
   &apos;RT (no backup RT)&apos;,6,
   &apos;VGT&apos;,9,
   0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource_Profile__c</fullName>
        <formula>Assigned_Resource__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Resource Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempted_Remote_Resolve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track if a Dispatcher attempted to Remote Resolve the Case</description>
        <label>Attempted Remote Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempted_to_Call_Partner_Operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempted to Call Partner Operator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Incident_Type__c</fullName>
        <label>CRM Incident Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Solution__c</fullName>
        <label>CRM Solution</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Called_Originated_By_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called Originated By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caller_Information__c</fullName>
        <label>Caller Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <description>Replacement for Caller Information so we can have clickable phone number.</description>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CaseAccountID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Month__c</fullName>
        <formula>TEXT( MONTH(datevalue (  ClosedDate  )))+&quot; / &quot;+text(year(datevalue(ClosedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Quarter__c</fullName>
        <formula>&apos;Q&apos;+TEXT(CEILING( MONTH(datevalue ( ClosedDate )) / 3))+&quot; &quot;+text(YEAR(datevalue(ClosedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Create_BH_Closed_Time__c</fullName>
        <description>The business hour closing time on the day the case was created.</description>
        <label>Case Create BH Closed Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Create_BH_Open_Time__c</fullName>
        <description>The opening business hour of the day the case was created.</description>
        <label>Case Create BH Open Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Create_Day_of_Week__c</fullName>
        <formula>IF(weekday(DATEVALUE(CreatedDate))=1,&quot;Sunday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=2,&quot;Monday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=3,&quot;Tuesday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=4,&quot;Wednesday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=5,&quot;Thursday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=6,&quot;Friday&quot;, 
IF(weekday(DATEVALUE(CreatedDate))=7,&quot;Saturday&quot;, 
&quot;Null&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Create Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolved_BH_Open_Time__c</fullName>
        <label>Case Resolved BH Open Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolved_Day_of_Week__c</fullName>
        <formula>IF(weekday(DATEVALUE(ClosedDate))=1,&quot;Sunday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=2,&quot;Monday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=3,&quot;Tuesday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=4,&quot;Wednesday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=5,&quot;Thursday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=6,&quot;Friday&quot;, 
IF(weekday(DATEVALUE(ClosedDate))=7,&quot;Saturday&quot;, 
&quot;Null&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolved Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$1 cassette is low /Empty</fullName>
                </value>
                <value>
                    <fullName>All games are down</fullName>
                </value>
                <value>
                    <fullName>Amusement Service</fullName>
                </value>
                <value>
                    <fullName>ATM feature is not working</fullName>
                </value>
                <value>
                    <fullName>Attendant pay / hand pay required</fullName>
                </value>
                <value>
                    <fullName>Battery low / error</fullName>
                </value>
                <value>
                    <fullName>Bezel disconnect</fullName>
                </value>
                <value>
                    <fullName>Bill Jam</fullName>
                </value>
                <value>
                    <fullName>Bill Jam / Not Accepting Money</fullName>
                </value>
                <value>
                    <fullName>Bill Validator Error / Communication timeout / Reject Limit Exceeded</fullName>
                </value>
                <value>
                    <fullName>Black / Distorted / Discolored Screen</fullName>
                </value>
                <value>
                    <fullName>board monitor tilt</fullName>
                </value>
                <value>
                    <fullName>Broken / Damaged Part</fullName>
                </value>
                <value>
                    <fullName>Button Panel Error / Not Working / Sticking</fullName>
                </value>
                <value>
                    <fullName>Call Attendant / 30 Second Message</fullName>
                </value>
                <value>
                    <fullName>Card reader not working</fullName>
                </value>
                <value>
                    <fullName>cash dispenser not ready</fullName>
                </value>
                <value>
                    <fullName>Cash drawer balance is low</fullName>
                </value>
                <value>
                    <fullName>Cassette won&apos;t configure</fullName>
                </value>
                <value>
                    <fullName>Change drawer will not open</fullName>
                </value>
                <value>
                    <fullName>Coin hopper error / Missing</fullName>
                </value>
                <value>
                    <fullName>Coin jam</fullName>
                </value>
                <value>
                    <fullName>Disabled / Disconnected / Wake Up Bit Timeout</fullName>
                </value>
                <value>
                    <fullName>Disc boot failure</fullName>
                </value>
                <value>
                    <fullName>Fatal fault</fullName>
                </value>
                <value>
                    <fullName>Frozen / lagging</fullName>
                </value>
                <value>
                    <fullName>Insert spielo usb key to continue</fullName>
                </value>
                <value>
                    <fullName>ip address conflict</fullName>
                </value>
                <value>
                    <fullName>Location / customer looking for information / calling to complain</fullName>
                </value>
                <value>
                    <fullName>Location has a large ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Formula field to determine the Case Priority. This field is populated onto the Service Appointment and used to Priority it in the Optimizer.</description>
        <formula>(If(Ispickval(Account.Priority__c,&quot;AAA&quot;),0,
If(Ispickval(Account.Priority__c,&quot;AA&quot;),1,
If(Ispickval(Account.Priority__c,&quot;A&quot;),2,
If(Ispickval(Account.Priority__c,&quot;B&quot;),3,
If(Ispickval(Account.Priority__c, &quot;C&quot;),5,
If(Ispickval(Account.Priority__c,&quot;D&quot;),7,5)))))))
+ (If(Ispickval(Service_Category__c ,&quot;RT (No Backup RT)&quot;),0.5,
If(Ispickval(Service_Category__c ,&quot;RT (Backup RT Available)&quot;) || Ispickval(Service_Category__c ,&quot;VGT&quot;) || Ispickval(Service_Category__c,&quot;Multiple VGTs&quot;),2,
IF(Ispickval(Service_Category__c , &quot;Standalone ATM&apos;&quot;) || Ispickval(Service_Category__c ,&quot;Jukebox&quot;), 4.5,
IF(Ispickval(Service_Category__c , &quot;Amusement&quot;) || Ispickval(Service_Category__c , &quot;Other&quot;),6,
IF(Ispickval(Service_Category__c , &quot;Wellness&quot;),7,0))))))</formula>
        <inlineHelpText>Formula field to determine the Case Priority. This field is populated onto the Service Appointment and used to Priority it in the Optimizer.</inlineHelpText>
        <label>Case</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_in_Last_7_Days__c</fullName>
        <formula>if(
(today()- datevalue(ClosedDate)) &lt;= 6,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed in Last 7 Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Region__c</fullName>
        <formula>text(Account.Collection_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concierge_Service__c</fullName>
        <formula>Account.Concierge_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Trimmed__c</fullName>
        <description>Field to return the date from Created Date for use in Field Service Case Creation screen flow</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (Trimmed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Day_Hours_Open__c</fullName>
        <description>The number of business hours open (total) on the day the case was created.</description>
        <label>Created Day Hours Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_via_WM_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created via WM Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_VGT_Count__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current VGT Count</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Current VGT Count)</relationshipLabel>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dark_Asset_HPD__c</fullName>
        <description>Value of VGT or NRT where applicable (to be written by Flow)</description>
        <label>Dark Asset HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dark_Asset_Total_Site_HPD__c</fullName>
        <label>Dark Asset Total Site HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dark_Time_Revenue_Loss__c</fullName>
        <description>This field is written to by Flow, as the compile size to achieve this in a formula on the Case object is too large.</description>
        <label>Dark Time Revenue Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed_Hour__c</fullName>
        <description>The hour a case was closed. Written to by Flow.</description>
        <label>Date/Time Case Closed Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened_Hour__c</fullName>
        <description>The hour a case was opened. This is written to by Flow.</description>
        <label>Date/Time Case Opened Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Claim__c</fullName>
        <label>Date of Claim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Issue__c</fullName>
        <label>Date of Issue:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date of Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Shipment__c</fullName>
        <label>Date of Shipment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Live__c</fullName>
        <formula>Account.Days_Live__c</formula>
        <label>Days Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Opened__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_RTT_Date__c</fullName>
        <label>Estimated RTT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2S_Updated__c</fullName>
        <formula>Account.Site_G2S_Updated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2S Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Case_Number__c</fullName>
        <label>Historical Case Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Inspection_Date__c</fullName>
        <label>IGB Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_Meeting_Status__c</fullName>
        <label>IGB Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted to IGB</fullName>
                </value>
                <value>
                    <fullName>IGB Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGB_Number__c</fullName>
        <formula>Account.IGB_License__c</formula>
        <label>IGB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Denied_Reason__c</fullName>
        <label>If Status Denied Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Other_Reason__c</fullName>
        <label>If Other (Reason)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Work_Type__c</fullName>
        <formula>Work_Type__r.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <label>Incident Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigated By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Investigated By)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Game_Down__c</fullName>
        <label>Is Game Down?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_a_Return_Required__c</fullName>
        <label>Is a Return Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Agreement__c</fullName>
        <formula>Length_of_Contract__r.Total_Time_Left_on_Agreement__c</formula>
        <label>Length of Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Length of Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Close_Time__c</fullName>
        <inlineHelpText>This is the time when the location closes for business</inlineHelpText>
        <label>Location Close Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Location_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>updated by a flow when the service appointment is marked as status = cannot complete and substatus = location closed</description>
        <label>Location Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_DBA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location DBA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Location DBA)</relationshipLabel>
        <relationshipName>Cases31pQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_From_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose the Location where the part, VGT, RT etc. is moving from</description>
        <label>Location From Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Location From Name)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Legal_Name_Case__c</fullName>
        <formula>Account.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Location Legal Name)</relationshipLabel>
        <relationshipName>Cases31r2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Open_Time__c</fullName>
        <inlineHelpText>This is the time when the location opens for business</inlineHelpText>
        <label>Location Open Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Location)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>